--- a/indexMappe/index_layout.css
+++ b/indexMappe/index_layout.css
@@ -1,3 +1,4 @@
+/***********Hero section*************/
 .background {
   display: flex;
   justify-content: center;
@@ -11,8 +12,59 @@
   align-items: center;
 }
 
+/***********Forside_oversigt*************/
+.grid2_1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(13, 1fr) auto;
+  gap: 25px;
+  position: relative;
+}
+
+#box1 {
+  grid-column: 1/5;
+  grid-row: 1/3;
+  position: relative;
+  z-index: 1;
+}
+
+#box2 {
+  grid-column: 3/6;
+  grid-row: 3/5;
+  position: relative;
+  z-index: 2;
+}
+
+#box3 {
+  grid-column: 2/5;
+  grid-row: 5/7;
+  position: relative;
+  z-index: 3;
+}
+
+#box4 {
+  grid-column: 1/4;
+  grid-row: 7/9;
+  position: relative;
+  z-index: 4;
+}
+
+#box5 {
+  grid-column: 1/6;
+  grid-row: 9/11;
+  position: relative;
+  z-index: 5;
+}
+
+#box6 {
+  grid-column: 3/6;
+  grid-row: 11/13;
+  position: relative;
+  z-index: 6;
+}
+
 @media (min-width: 600px) {
-  .grid1_1-1 {
+  /*.grid1_1-1 {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
@@ -21,12 +73,79 @@
   #header_img {
     text-align: center;
     align-self: center;
-    justify-self: center;
   }
 
   #header_txt {
-    text-align: center;
-    justify-self: baseline;
-    justify-self: right;
+    text-align: right;
+    align-self: flex-end;
+  }*/
+
+  /***********Hero section*************/
+  .grid1_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr auto;
+    gap: 10px;
+  }
+
+  #header_img {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  #header_txt {
+    grid-column: 2/3;
+    grid-row: 2;
+    text-align: right;
+  }
+
+  .grid2_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
+    gap: 10px;
+    position: relative;
+  }
+
+  #box1 {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    position: relative;
+    z-index: 1;
+  }
+
+  #box2 {
+    grid-column: 3/6;
+    grid-row: 2/4;
+    position: relative;
+    z-index: 2;
+  }
+
+  #box3 {
+    grid-column: 2/4;
+    grid-row: 3/5;
+    position: relative;
+    z-index: 3;
+  }
+
+  #box4 {
+    grid-column: 3/6;
+    grid-row: 4/6;
+    position: relative;
+    z-index: 4;
+  }
+
+  #box5 {
+    grid-column: 1/5;
+    grid-row: 5/7;
+    position: relative;
+    z-index: 5;
+  }
+
+  #box6 {
+    grid-column: 4/6;
+    grid-row: 6/9;
+    position: relative;
+    z-index: 6;
   }
 }
