--- a/indexMappe/index_style.css
+++ b/indexMappe/index_style.css
@@ -9,11 +9,112 @@ body {
   height: 100%;
 }
 
-.background {
-  height: 100vh;
+html {
+  /*colors*/
+  --primary-color: #1b1c1d;
+  --secondary-color: #a2e23a;
 }
 
+/***********Fonts*************/
+h1 {
+  color: var(--secondary-color);
+}
+
+h2 {
+  color: var(--secondary-color);
+}
+
+/***********Hero section*************/
+
+.background {
+  height: 50vh;
+}
 .grid1_1-1 {
   width: 80%;
   height: 100%;
+}
+
+/***********forside_oversigt*************/
+
+#forside_oversigt {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  padding: 1rem;
+}
+
+.innerBox {
+  width: 100%;
+  height: 100%;
+}
+
+.grid2_1-1 div {
+  background-color: var(--primary-color);
+  border: 2px solid var(--secondary-color);
+}
+
+.grid2_1-1 div:hover {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  cursor: pointer;
+
+  z-index: 1000;
+}
+
+.grid2_1-1 div:hover h2 {
+  color: var(--primary-color);
+}
+
+/***********intro_box*************/
+#intro_box {
+  margin-right: 2vw;
+  margin-left: 2vw;
+  padding: 1rem;
+}
+
+#intro_box h2 {
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+  .background {
+    height: 100vh;
+  }
+  #intro_box {
+    margin-right: 4vw;
+    margin-left: 4vw;
+  }
+
+  #forside_oversigt {
+    padding: 1rem;
+  }
+  .grid2_1-1 {
+    width: 90%;
+  }
+
+  #box1 {
+    height: 300px;
+  }
+
+  #box2 {
+    height: 350px;
+  }
+
+  #box3 {
+    height: 300px;
+  }
+
+  #box4 {
+    height: 400px;
+  }
+
+  #box5 {
+    height: 450px;
+  }
+
+  #box6 {
+    height: 300px;
+  }
 }
