--- a/general_css/style.css
+++ b/general_css/style.css
@@ -71,9 +71,9 @@ a {
   text-decoration: none;
 }
 
-@media (max-width: 680px) {
+@media (max-width: 800px) {
   h1 {
-    font-size: var(--la);
+    font-size: var(--ml);
   }
 
   h2 {
