--- a/general_css/menu.css
+++ b/general_css/menu.css
@@ -5,13 +5,15 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  padding-left: 0px;
   background: none;
+  z-index: 1000;
   /*box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);*/
 }
 
 .logo img {
-  width: 50px;
-  height: 50px;
+  width: 87px;
+  height: 87px;
 }
 
 nav {
@@ -55,6 +57,7 @@ nav li {
   width: 30px;
   height: 20px;
   cursor: pointer;
+  background-color: #1b1c1d;
 }
 
 .burger .line {
@@ -98,7 +101,7 @@ nav li {
     left: 0;
     width: 100%;
     box-shadow: 0 10px 10px rgb(162, 226, 58, 0.5);
-    z-index: 1;
+    z-index: 1000;
   }
 
   nav.active .menu li {
@@ -107,5 +110,12 @@ nav li {
 
   nav.active .menu a {
     font-size: 24px;
+  }
+}
+@media (min-width: 800px) {
+  .menu li:last-child a {
+    border: 2px solid #a2e23a;
+    border-radius: 5px;
+    padding: 10px;
   }
 }
