--- a/webMappe/web_layout.css
+++ b/webMappe/web_layout.css
@@ -53,6 +53,12 @@
     gap: 10px;
   }
 
+  .grid5_1-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+
   #endDivpic {
     grid-column: 1/3;
     grid-row: 1/3;
